# regexum

./: Cargo.toml
regexum-macros/: Cargo.toml
regexum-macros/src/: attrs.rs  lib.rs
src/: lib.rs
tests/: stub.rs
